--- a/tutorial.html
+++ b/tutorial.html
@@ -29,7 +29,9 @@
         </figure>
       </div>
       <button class="start letsQuiz">
-        <a href="game.html" id="start">Let's Quiz!</a>
+        <a href="game.html" id="start" onclick="playStartAudio()"
+          >Let's Quiz!</a
+        >
       </button>
     </main>
     <footer>
