--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="shortcut icon" href="/img/quiz.ico" type="image/x-icon" />
-    <title>PYR HAB</title>
+    <title>Cinema Quiz</title>
   </head>
   <body>
     <div class="gamePrincipal">
@@ -17,21 +17,16 @@
 
       <main>
         <section id="question">
-          <h2 id="questionText" class="scaleAni">Question</h2>
+          <h2 id="questionText" class="scaleAni"></h2>
         </section>
         <section id="questions">
-          <button class="question leftAni" id="first">Answer 1</button>
-          <button class="question rightAni" id="second">Answer 2</button>
-          <button class="question leftAni" id="third">Answer 3</button>
-          <button class="question rightAni" id="fourth">Answer 4</button>
+          <button class="question leftAni" id="first"></button>
+          <button class="question rightAni" id="second"></button>
+          <button class="question leftAni" id="third"></button>
+          <button class="question rightAni" id="fourth"></button>
         </section>
       </main>
     </div>
-    <footer class="gameFooter">
-      <a target="_blank" href="https://github.com/pabloberu/CinemaQuiz">
-        Copyright 2022 Pablo & Brais - HackABoss</a
-      >
-    </footer>
     <script type="module" src="./js/script.js"></script>
   </body>
 </html>
