--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="shortcut icon" href="/img/quiz.ico" type="image/x-icon" />
-    <title>PYR HAB</title>
+    <title>Cinema Quiz</title>
   </head>
   <body>
     <div id="principal">
@@ -21,7 +21,7 @@
       </main>
     </div>
     <footer>
-      <a target="_blank" href="https://github.com/pabloberu/CinemaQuiz">
+      <a target="_blank" href="https://github.com/TheBraisgf/Cinema-Quiz">
         Copyright 2022 Pablo & Brais-HackABoss</a
       >
     </footer>
