--- a/tutorial.html
+++ b/tutorial.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="shortcut icon" href="/img/quiz.ico" type="image/x-icon" />
-    <title>PYR HAB</title>
+    <title>Cinema Quiz</title>
   </head>
   <body>
     <header>
-      <h1 class="glow-stop">CINEMA QUIZ</h1>
+      <h1 class="glow-stop" id="tutorialTitle">CINEMA QUIZ</h1>
     </header>
 
-    <main id="tutorial">
+    <main>
       <div class="tutorialDiv">
         <figure>
           <figcaption>
@@ -28,20 +28,9 @@
           <img class="tutorialImg" src="/img/tutorial2.png" alt="rank" />
         </figure>
       </div>
-      <button class="start letsQuiz">
-        <a href="game.html" id="start" onclick="playStartAudio()"
-          >Let's Quiz!</a
-        >
+      <button class="start">
+        <a href="game.html" id="start">Let's Quiz!</a>
       </button>
     </main>
-    <footer>
-      <a
-        class="tutorialFooter"
-        target="_blank"
-        href="https://github.com/pabloberu/CinemaQuiz"
-      >
-        Copyright 2022 Pablo & Brais-HackABoss</a
-      >
-    </footer>
   </body>
 </html>
