--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       </header>
 
       <main>
-        <button class="start">
+        <div class="start">
           <a href="tutorial.html" id="start">Start</a>
-        </button>
+        </div>
       </main>
     </div>
     <footer>
