--- a/tutorial.html
+++ b/tutorial.html
@@ -28,9 +28,9 @@
           <img class="tutorialImg" src="/img/tutorial2.png" alt="rank" />
         </figure>
       </div>
-      <button class="start">
+      <div class="start">
         <a href="game.html" id="start">Let's Quiz!</a>
-      </button>
+      </div>
     </main>
   </body>
 </html>
